--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ wasimul
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:niloyislambd@outlook.com">admin@niloy.pw</a></span>
+                                        <span><a href="mailto:niloyislambd@outlook.com"><h6>info@wasimulkarimniloy.top</h6></a></span>
                                     </p>
                                 </div>
                             </div>
