--- a/index.html
+++ b/index.html
@@ -224,27 +224,27 @@ wasimul
                     <div class="row align-items-center">
 
                         <div class="col-lg-12 col-12">
-                            <h3 class="text-center mb-5">I’m available on</h3>
+                            <h3 class="text-center mb-5">I’m available on for working</h3>
                         </div>
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
-                            <img src="images/clients/cachet.svg" class="clients-image img-fluid" alt="">
+                           <a href="https://wasimul-karim-niloy.blogspot.com/"> <img src="images/clients/cachet.svg" class="clients-image img-fluid" alt="blogger"> </a>
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/guitar-center.svg" class="clients-image img-fluid" alt="">
+                         <a href="https://www.linkedin.com/in/wasimulkarimniloy/">   <img src="images/clients/guitar-center.svg" class="clients-image img-fluid" alt="linkedin"> </a>
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/tokico.svg" class="clients-image img-fluid" alt="">
+                         <a href="https://github.com/wasimulkarimniloy/">   <img src="images/clients/tokico.svg" class="clients-image img-fluid" alt="github"> </a>
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/shopify.svg" class="clients-image img-fluid" alt="">
+                        <a href="">    <img src="images/clients/shopify.svg" class="clients-image img-fluid" alt=""> </a>
                         </div>
 
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
-                            <img src="images/clients/profil-rejser.svg" class="clients-image img-fluid" alt="">
+                        <a href="https://www.freelancer.com/u/wasimulkarim">    <img src="images/clients/Freelancer.svg" class="clients-image img-fluid" alt="freelancer"> </a>
                         </div>
 
                     </div>
@@ -277,7 +277,7 @@ wasimul
 
                                         <p>You may want to explore Too CSS for great collection of free HTML CSS templates.</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="mailto:info@wasimulkarimniloy.top" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-globe"></i>
@@ -298,7 +298,7 @@ wasimul
 
                                         <p>You can explore more CSS templates on TemplateMo website by browsing through different tags.</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="mailto:info@wasimulkarimniloy.top" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-lightbulb"></i>
@@ -319,7 +319,7 @@ wasimul
 
                                         <p>If you need a customized ecommerce website for your business, feel free to discuss with me.</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="mailto:info@wasimulkarimniloy.top" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-phone"></i>
@@ -340,7 +340,7 @@ wasimul
 
                                         <p>To list your website first on any search engine, we will work together. First Portfolio is one-page CSS Template for free download.</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="mailto:info@wasimulkarimniloy.top" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-google"></i>
@@ -371,9 +371,9 @@ wasimul
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Branding</small>
+                                    <small class="projects-tag">3d projects</small>
 
-                                    <h3 class="projects-title">NILOY agency</h3>
+                                    <h3 class="projects-title">3d projects</h3>
                                 </div>
 
                                 <a href="images/projects/nikhil-KO4io-eCAXA-unsplash.jpg" class="popup-image">
@@ -385,9 +385,9 @@ wasimul
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
+                                    <small class="projects-tag">3d projects</small>
 
-                                    <h3 class="projects-title">The Watch</h3>
+                                    <h3 class="projects-title">3d project</h3>
                                 </div>
 
                                 <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
@@ -399,9 +399,9 @@ wasimul
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">3d projects</small>
 
-                                    <h3 class="projects-title">NILOY</h3>
+                                    <h3 class="projects-title">3d projects</h3>
                                 </div>
 
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
@@ -409,6 +409,72 @@ wasimul
                                 </a>
                             </div>
                         </div>
+			<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">3d projects</small>
+
+                                    <h3 class="projects-title">3d project</h3>
+                                </div>
+
+                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                    <img src="images/projects/project-image08.png" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
+			<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">3d projects</small>
+
+                                    <h3 class="projects-title">3d project</h3>
+                                </div>
+
+                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                    <img src="images/projects/project-image06.png" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
+			<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">3d projects</small>
+
+                                    <h3 class="projects-title">3d project</h3>
+                                </div>
+
+                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                    <img src="images/projects/project-image05.png" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
+			<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">3d projects</small>
+
+                                    <h3 class="projects-title">3d project</h3>
+                                </div>
+
+                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                    <img src="images/projects/project-image04.png" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
+			<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">3d projects</small>
+
+                                    <h3 class="projects-title">3d project</h3>
+                                </div>
+
+                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                    <img src="images/projects/project-image03.png" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
+
 
                     </div>
                 </div>
@@ -433,13 +499,13 @@ wasimul
                                     <strong class="site-footer-title d-block mb-3">Services</strong>
 
                                     <ul class="footer-menu">
-                                        <li class="footer-menu-item"><a href="http://niloy.pw" class="footer-menu-link">Websites</a></li>
+                                        <li class="footer-menu-item"><a href="http://wasimulkarimniloy.top" class="footer-menu-link">Websites</a></li>
 
-                                        <li class="footer-menu-item"><a href="http://niloy.pw" class="footer-menu-link">Branding</a></li>
+                                        <li class="footer-menu-item"><a href="http://wasimulkarimniloy.top" class="footer-menu-link">Branding</a></li>
 
-                                        <li class="footer-menu-item"><a href="http://niloy.pw" class="footer-menu-link">Ecommerce</a></li>
+                                        <li class="footer-menu-item"><a href="http://wasimulkarimniloy.top" class="footer-menu-link">Ecommerce</a></li>
 
-                                        <li class="footer-menu-item"><a href="http://niloy.pw" class="footer-menu-link">SEO</a></li>
+                                        <li class="footer-menu-item"><a href="http://wasimulkarimniloy.top" class="footer-menu-link">SEO</a></li>
                                     </ul>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
@@ -471,19 +537,19 @@ wasimul
                                     <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
 
                                     <p>
-                                        <a href="mailto:niloyislambd@outlook.com">
-                                            niloyislambd@outlook.com
+                                        <a href="mailto:info@wasimulkarimniloy.top">
+                                            info@wasimulkarimniloy.top
                                         </a>
                                         <br>
-                                        <a href="mailto:niloyislambd@outlook.com">
-                                            admin@niloy.pw
+                                        <a href="mailto:info@wasimulkarimniloy.top">
+                                            info@wasimulkarimniloy.top
                                         </a>
                                     </p>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Call</strong>
 
                                     <p class="mb-0">
-                                        <a href="tel: 120-240-9600">
+                                        <a href="tel: 01843946847">
                                             01843946847
                                         </a>
                                     </p>
