--- a/index.html
+++ b/index.html
@@ -474,7 +474,19 @@ wasimul
                                 </a>
                             </div>
                         </div>
+			<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">3d projects</small>
 
+                                    <h3 class="projects-title">3d project</h3>
+                                </div>
+
+                                <iframe width="360" height="200" src="https://www.youtube.com/embed/ylPwEXwRI_s?si=sPMzsXmvgSPCXBnm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                    <img src="s" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -628,7 +640,7 @@ wasimul
                                         </div>
 
                                         <div class="col-lg-3 col-12 ms-auto">
-                                            <button type="submit" class="form-control">Send</button>
+                                            <a href="mailto:info@wasimulkarimniloy.top" class="form-control"><button type="submit" class="form-control">Send</button></a>
                                         </div>
 
                                     </div>
