--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ wasimul
                                     <h3 class="projects-title">3d project</h3>
                                 </div>
 
-                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                <a href="images/projects/project-image08.png" class="popup-image">
                                     <img src="images/projects/project-image08.png" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
@@ -430,7 +430,7 @@ wasimul
                                     <h3 class="projects-title">3d project</h3>
                                 </div>
 
-                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                <a href="images/projects/project-image06.png" class="popup-image">
                                     <img src="images/projects/project-image06.png" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
@@ -443,7 +443,7 @@ wasimul
                                     <h3 class="projects-title">3d project</h3>
                                 </div>
 
-                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                <a href="images/projects/project-image05.png" class="popup-image">
                                     <img src="images/projects/project-image05.png" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
@@ -456,7 +456,7 @@ wasimul
                                     <h3 class="projects-title">3d project</h3>
                                 </div>
 
-                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                <a href="images/projects/project-image04.png" class="popup-image">
                                     <img src="images/projects/project-image04.png" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
@@ -469,7 +469,7 @@ wasimul
                                     <h3 class="projects-title">3d project</h3>
                                 </div>
 
-                                <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
+                                <a href="images/projects/project-image03.png" class="popup-image">
                                     <img src="images/projects/project-image03.png" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
