--- a/index.html
+++ b/index.html
@@ -474,7 +474,19 @@ wasimul
                                 </a>
                             </div>
                         </div>
-			
+			<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">3d projects</small>
+
+                                    <h3 class="projects-title">3d project</h3>
+                                </div>
+
+                                <a href="images/projects/git.png" class="popup-image">
+                                    <img src="images/projects/git.png" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
