--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ wasimul
                     <div class="row">
 
                         <div class="col-lg-6 col-12">
-                            <img src="images/couple-working-from-home-together-sofa.jpg" class="about-image img-fluid" alt="">
+                            <img src="images/ss.png" class="about-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
