--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
         <link href="css/magnific-popup.css" rel="stylesheet">
 
         <link href="css/templatemo-first-portfolio-style.css" rel="stylesheet">
-        <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="fcb42c53-8409-4216-b451-ec4d6b848bcf";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script><!--
+       <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="166f8335-8611-468b-84a9-1878d4c4147b";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
-wasimul
-
--->
     </head>
     
     <body>
