--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Start a project</strong>
 
-                                    <p class="mb-0">I’m available for freelance projects</p>
+                                    <p class="mb-0">wasimul karim niloy available for freelance projects</p>
                                 </div>
                             </div>
 
