--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 </div>
 
                                 <h2 class="mb-4">I’m available for freelance work.</h2>
-                                <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">Let's begin</a></p>
+                                <p class="mb-4"><a class="custom-btn btn custom-link" href="https://www.upwork.com/freelancers/~01804be29c6789d0c8">HIRE ME</a></p>
                             </div>
                         </div>
 
