--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                                     <ul class="social-icon">
                                         <li class="social-icon-item"><a href="https://www.linkedin.com/in/wasimulkarimniloy/" class="social-icon-link bi-linkedin"></a></li>
 
-                                        <li class="social-icon-item"><a href="https://www.instagram.com/wasimulkarimniloy/" class="social-icon-link bi-instagram"></a></li>
+                                        <li class="social-icon-item"><a href="https://github.com/wasimulkarimniloy" class="social-icon-link bi-github"></a></li>
 
                                         <li class="social-icon-item"><a href="https://twitter.com/NiloyviIslam" class="social-icon-link bi-twitter"></a></li>
 
