--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                        <a href="">    <img src="images/clients/shopify.svg" class="clients-image img-fluid" alt=""> </a>
+                        <a href="https://www.upwork.com/freelancers/~01804be29c6789d0c8">    <img src="images/clients/shopify.svg" class="clients-image img-fluid" alt="upwork"> </a>
                         </div>
 
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
