--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="icons8-favicon.gif" type="image/gif" >
+        <link rel="icon" href="2-removebg-preview.png" type="image/gif" >
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 	<link rel="stylesheet" href="style.css">
