--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                             </div>
 
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                                <form action="https://formspree.io/f/xzbnywbb" method="POST" class="custom-form contact-form" role="form">
+                                <form action="https://formspree.io/f/mdoqyjqw" method="POST" class="custom-form contact-form" role="form">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-12">
                                             <div class="form-floating">
