--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <h3 class="pt-2 mb-3">A LITTLE BIT ABOUT WASIMUL KARIM NILOY</h3>
 
         
-                                <p>Wasimul Karim Niloy, born on September 10, 2006, in the Gopalganj district of Bangladesh, is a 3D artist. His father serves as a school teacher. Worked with Blender software since 2022, Wasimul Karim Niloy is a proficient user of the software. He follows the Muslim faith and completed his Intermediate education at Satpar College.</p>
+                                <p>Wasimul Karim Niloy, born on September 10, 2006, in the Gopalganj district of Bangladesh, is a 3D artist and video editor. His father serves as a school teacher. Worked with Blender software since 2022, Wasimul Karim Niloy is a proficient user of the software. He follows the Muslim faith and completed his Intermediate education at Satpar College.</p>
                             </div>
                         </div>
 
