--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">NILOY</a>
+                <a href="https://wasimulkarimniloy.top" class="navbar-brand mx-auto mx-lg-0">
+   					 <img src="logo.jpg" alt="Website Logo">
+		</a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
