--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 
                                         <li class="social-icon-item"><a href="https://github.com/wasimulkarimniloy" class="social-icon-link bi-github"></a></li>
 
-                                        <li class="social-icon-item"><a href="https://twitter.com/NiloyviIslam" class="social-icon-link bi-twitter"></a></li>
+                                        <li class="social-icon-item"><a href="https://twitter.com/wasimul_karim" class="social-icon-link bi-twitter"></a></li>
 
                                         <li class="social-icon-item"><a href="https://www.youtube.com/@wasimulkarimniloy" class="social-icon-link bi-youtube"></a></li>
                                     </ul>
