--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="#section_5">Contact</a>
                         </li>
+			    <li class="nav-item">
+                            <a class="nav-link click-scroll" href="https://drive.usercontent.google.com/download?id=1g-A3TutbdiFt8sT-Y0Vc9JHZoV3gEyTF&export=download">download app</a>
+                        </li>
                     </ul>
 
                     <div class="d-lg-flex align-items-center d-none ms-auto">
