--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <meta name="author" content="TemplateMo">
 	<link rel="stylesheet" href="style.css">
         <title>WASIMUL KARIM NILOY</title>
-
+<!-- Animate -->
+    <link rel="stylesheet" href="upadan/css/animate.css" media="all">
+    <!-- Main Style -->
+    <link rel="stylesheet" href="upadan/css/main.css" media="all">
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
@@ -91,11 +94,14 @@
     <source src="0420.MP3" type="audio/mp3">
   </audio>
 
-        <section class="preloader">
-            <div class="spinner">
-                <span class="spinner-rotate"></span>    
-            </div>
-        </section>
+        <div class="preloader">
+        <div class="loader">
+            <div class="loader-outter"></div>
+            <div class="loader-inner"></div>
+
+            <span>N</span>
+        </div>
+    </div>
 
         <nav class="navbar navbar-expand-lg">
             <div class="container">
