--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                     <h4 class="mb-0">Information</h4>
                                 </div>
 
-                                <div class="profile-body">
+                               <div class="profile-body">
                                     <p>
                                         <span class="profile-small-title">Name</span> 
                                         <span>NILOY</span>
@@ -240,14 +240,19 @@
 
                                     <p>
                                         <span class="profile-small-title">Phone</span> 
-                                         <span><a href="tel: 305-240-9671">01843946847</a></span>
+                                         <span><a href="tel: 01843946847">01843946847</a></span>
                                     </p>
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:niloyislambd@outlook.com"><h6>info@wasimulkarimniloy.top</h6></a></span>
+                                        <small><small><small><small><small><span><a href="mailto:info@wasimulkarimniloy.top"><small><b>info@wasimulkarimniloy.top</b></small></a></span></small></small></small></small></small>
+                                    </p>
+					<p>
+                                        <small><span class="profile-small-title">Education</span></small> 
+                                        <small><small> <small><span><a href="https://www.govtnazrulcollege.edu.bd/"><small>Govt.Nazrul College</small></a></span></small></small></small>
                                     </p>
                                 </div>
+
                             </div>
                         </div>
 
