--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
     <head>
+	    <meta name="keywords" content="niloy, niloy islam, wasimul karim niloy, video editor, 3d artist, bangladeshi 3d artist, bangladeshi video editor, video editor wasimul karim niloy">
+	    <meta name="description" content="Wasimul Karim Niloy, born on September 10, 2006, in the Gopalganj district of Bangladesh, is a 3D artist and video editor. His father serves as a school teacher. Worked with Blender software since 2022, Wasimul Karim Niloy is a proficient user of the software. He follows the Muslim faith and completed his Intermediate education at Satpar College.">
+	    <meta name="author" content="wasimul karim niloy">
         <meta charset="utf-8">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
