--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
                             <a class="nav-link click-scroll" href="#section_5">Contact</a>
                         </li>
 			    <li class="nav-item">
+                            <a class="nav-link click-scroll" href="html-color-codes.html">more Service</a>
+                        </li>
+			    <li class="nav-item">
                             <a class="nav-link click-scroll" href="https://drive.usercontent.google.com/download?id=1g-A3TutbdiFt8sT-Y0Vc9JHZoV3gEyTF&export=download">download app</a>
                         </li>
                     </ul>
