--- a/html-color-codes.html
+++ b/html-color-codes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type='text/javascript' src='//pl23448042.highcpmgate.com/70/83/19/708319091bef61608198e2339fbe717b.js'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML color codes</title>
