--- a/html-color-codes.html
+++ b/html-color-codes.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" href="2-removebg-preview.png" type="image/gif" >
+    <meta name="keywords" content="niloy, niloy islam, wasimul karim niloy, video editor, 3d artist, bangladeshi 3d artist, bangladeshi video editor, video editor wasimul karim niloy">
+	    <meta name="description" content="Wasimul Karim Niloy, born on September 10, 2006, in the Gopalganj district of Bangladesh, is a 3D artist and video editor. His father serves as a school teacher. Worked with Blender software since 2022, Wasimul Karim Niloy is a proficient user of the software. He follows the Muslim faith and completed his Intermediate education at Satpar College.">
+	    <meta name="author" content="wasimul karim niloy">
+	    <meta http-equiv="refresh" content="30">
     <script type='text/javascript' src='//pl23448042.highcpmgate.com/70/83/19/708319091bef61608198e2339fbe717b.js'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
