--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
 			    <li class="nav-item">
                             <a class="nav-link click-scroll" href="menubar.html">more Service</a>
                         </li>
+			    </li>
+			    <li class="nav-item">
+                            <a class="nav-link click-scroll" href="cssloaders.html">css loaders</a>
+                        </li>
 			    <li class="nav-item">
                             <a class="nav-link click-scroll" href="https://drive.usercontent.google.com/download?id=1g-A3TutbdiFt8sT-Y0Vc9JHZoV3gEyTF&export=download">download app</a>
                         </li>
