--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
                             <a class="nav-link click-scroll" href="#section_5">Contact</a>
                         </li>
 			    <li class="nav-item">
-                            <a class="nav-link click-scroll" href="menubar.html">more Service</a>
+                            <a  href="menubar.html">more Service</a>
                         </li>
 			    </li>
 			    <li class="nav-item">
-                            <a class="nav-link click-scroll" href="cssloaders.html">css loaders</a>
+                            <a href="cssloaders.html">cssloaders</a>
                         </li>
 			    <li class="nav-item">
                             <a class="nav-link click-scroll" href="https://drive.usercontent.google.com/download?id=1g-A3TutbdiFt8sT-Y0Vc9JHZoV3gEyTF&export=download">download app</a>
