--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 			    <li class="nav-item">
                             <a class="nav-link click-scroll" href="cssloaders.html">css loaders</a>
                         </li>
+			    </li>
+			    <li class="nav-item">
+                            <a class="nav-link click-scroll" href="subir.html">more</a>
+                        </li>
 			    
                     </ul>
 
