--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <a class="nav-link click-scroll" href="#section_5">Contact</a>
                         </li>
 			    <li class="nav-item">
-                            <a class="nav-link click-scroll" href="menubar.html">more Service</a>
+                            <a class="nav-link click-scroll" href="menubar.html">more</a>
                         </li>
 			   
 			    <li class="nav-item">
