--- a/index.html
+++ b/index.html
@@ -199,12 +199,60 @@
             </section>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <section class="about section-padding" id="section_2">
                 <div class="container">
                     <div class="row">
 
                         <div class="col-lg-6 col-12">
-                            <img src="images/ss.png" class="about-image img-fluid" alt="">
+                            						<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container" style="display: flex; justify-content: center;">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
+  {
+  "width": 500,
+  "height": 490,
+  "defaultColumn": "overview",
+  "screener_type": "crypto_mkt",
+  "displayCurrency": "USD",
+  "colorTheme": "dark",
+  "locale": "en",
+  "isTransparent": false
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
+<style>
+  .tradingview-widget-container {
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+  
+  @media (max-width: 600px) {
+    .tradingview-widget-container {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+</style>
+
                         </div>
 
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
