--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!doctype html>
 <html lang="en">
     <head>
+	    <!-- ads -->
+
+<script type='text/javascript' src='//pl23448042.highrevenuenetwork.com/70/83/19/708319091bef61608198e2339fbe717b.js'></script>
+	    <script type="text/javascript">
+	atOptions = {
+		'key' : '7d6d69ebb56ca6a664adf860ceb6829f',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/7d6d69ebb56ca6a664adf860ceb6829f/invoke.js"></script>
+
+	    
+	    <!-- ads -->
 	    <meta name="keywords" content="niloy, niloy islam, wasimul karim niloy, video editor, 3d artist, bangladeshi 3d artist, bangladeshi video editor, video editor wasimul karim niloy">
 	    <meta name="description" content="Wasimul Karim Niloy, born on September 10, 2006, in the Gopalganj district of Bangladesh, is a 3D artist and video editor. His father serves as a school teacher. Worked with Blender software since 2022, Wasimul Karim Niloy is a proficient user of the software. He follows the Muslim faith and completed his Intermediate education at Satpar College.">
 	    <meta name="author" content="wasimul karim niloy">
