--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
 	    <!-- ads -->
+	    <script type='text/javascript' src='//pl23149129.highrevenuenetwork.com/65/b3/ac/65b3ac01dfaf05a0d870933a572eb3fc.js'></script>
+	    <script type='text/javascript' src='//pl23149129.highrevenuenetwork.com/65/b3/ac/65b3ac01dfaf05a0d870933a572eb3fc.js'></script>
 
 <script type='text/javascript' src='//pl23448042.highrevenuenetwork.com/70/83/19/708319091bef61608198e2339fbe717b.js'></script>
 
