--- a/spider.html
+++ b/spider.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>WASIMUL KARIM NILOY</title>
-  
+  <link href="assets/img/favicon.png" rel="icon">
 </head>
 <body>
 
