--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="spider.html">Blogs</a></li>
-          <li class="dropdown"><a href="#"><span>More Sirvice</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="blog.html">Blogs</a></li>
+          <li class="dropdown"><a href="spider.html"><span>More Sirvice</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="cssloder/cssloaders.html">CSS LODER</a></li>
               <li class="dropdown"><a href="#"><span>Deep sirvice</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
