--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 </head>
 
 <body class="index-page">
+   <video autoplay loop>
+        <source src="bg.mp4" type="video/mp4">
+        Your browser does not support the audio tag.
+    </video>
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
