--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body class="index-page">
-   <video autoplay loop>
+   <video style="display:none;" autoplay loop>
         <source src="bg.mp4" type="video/mp4">
         Your browser does not support the audio tag.
     </video>
