--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
             <span class="sitename">NILOY</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>kalpur chorpara</p>
+            <p>kalpur charpara</p>
             <p>gopalganj, bangladesh</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+880 01540624493</span></p>
             <p><strong>Email:</strong> <span>info@wasimulkarimniloy.top</span></p>
