--- a/blog.html
+++ b/blog.html
@@ -138,7 +138,8 @@
         <p>
   এই ওয়েব পেজে দেখানো হয়েছে যে কিভাবে আওয়ামী লীগের শাসনামলে অর্থাৎ ২০২৪ সালের বাংলাদেশের ছাত্র  আন্দলনে  গণহত্যার সকল গোপন ও ভাইরাল  ফটো এবং ভিডিও।
         </p>
-        
+        <br>
+	   <h1 class="text-center"> <a href="https://wasimulkarimniloy.top/" > WASIMUL KARIM NILOY'S  WEBSAITE</a> </h1>
     </section>
 
     <!-- Photo Section -->
