--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+<script src="https://public.bnbstatic.com/unpkg/growth-widget/cryptoCurrencyWidget@0.0.20.min.js" ></script><div class="binance-widget-marquee" data-cmc-ids="1,1027,52,1839,5426,74,2,2010,1975" data-theme="dark" data-transparent="true" data-locale="en" data-fiat="USD" data-powered-by="Powered by" data-disclaimer="Disclaimer" ></div>
     
 </head>
     <!-- CSS FILES -->
